# SmartCar2023-Orion

./: Readme.md
ProjectFiles/Appendix/主板/【例程】各个模块的使用例程/: tc264_main_board_demo.7z
ProjectFiles/Appendix/主板/【封装】TC264 主板V2.6 集成封装库/: TC264_主板_V2.6.PcbLib
ProjectFiles/Appendix/主板/【软件】上位机 串口助手等/: sscom51.ini
ProjectFiles/Hardware/PCB/FastestCar-Motor/: FastestCar-Motor.OutJob  FastestCar-Motor.PrjPcb  FastestCar-Motor.PrjPcbStructure  FastestCar-Motor.xlsx  主板_2.SchDoc  驱动_1.SchDoc  驱动_2.SchDoc
ProjectFiles/Hardware/猎户座/FastestCar-Motor/: FastestCar-Motor.PrjPcb  主板_1.SchDoc  驱动_1.SchDoc  驱动_2.SchDoc
ProjectFiles/Hardware/猎户座/FastestCar_Ctl/: FastestCar_Ctl.OutJob  FastestCar_Ctl.PrjPcb  FastestCar_Ctl.PrjPcbStructure  FastestCar_Ctl.xlsx  主板_1.SchDoc  主板_2.SchDoc  主板_3.SchDoc
ProjectFiles/Software/E02_05_bldc_contro_demo/: .cproject  .project  Fastest_Car.launch
ProjectFiles/Software/E02_05_bldc_contro_demo/Debug/: Fastest_Car.hex  Fastest_Car.map  Fastest_Car.mdf  TASKING_C_C___Compiler-Include_paths.opt  makefile
ProjectFiles/Software/E02_05_bldc_contro_demo/code/: Filter.c  Filter.h  IMU.c  IMU.h  Key.c  Key.h  Motor.c  Motor.h  Printf.c  Printf.h  UI.c  UI.h  VOFA.c  VOFA.h  VOFA_imageformat.h  attitude_solution.c  attitude_solution.h
ProjectFiles/Software/E02_05_bldc_contro_demo/user/: cpu0_main.c  isr.c  isr.h
ProjectFiles/Software/Seekfree_TC264_Opensource_Library/: .cproject  Seekfree_TC264_Opensource_Library.launch
ProjectFiles/Software/Seekfree_TC264_Opensource_Library/Debug/: Seekfree_TC264_Opensource_Library.hex  Seekfree_TC264_Opensource_Library.map  Seekfree_TC264_Opensource_Library.mdf  TASKING_C_C___Compiler-Include_paths.opt  makefile
ProjectFiles/Software/Seekfree_TC264_Opensource_Library/code/: IMU.c  IMU.h  Key.c  Key.h  Motor.c  Motor.h  Motor_Ctrl.c  Motor_Ctrl.h  Run.c  Run.h  UI.c  UI.h  VOFA.c
ProjectFiles/Software/Seekfree_TC264_Opensource_Library/user/: cpu0_main.c  cpu1_main.c  isr.c  isr_config.h
ProjectFiles/Software/seekfree_tc264_bldc_gtm/: .cproject  .project
ProjectFiles/Software/seekfree_tc264_bldc_gtm/Debug/: TASKING_C_C___Compiler-Include_paths.opt  makefile  seekfree_tc264_bldc_gtm.hex  seekfree_tc264_bldc_gtm.map  seekfree_tc264_bldc_gtm.mdf  sources.mk
ProjectFiles/Software/seekfree_tc264_bldc_gtm/user/: cpu0_main.c  cpu1_main.c  isr.c  isr_config.h
参考资料/TC264_GTM_BLDC_Project-master/TC264_GTM_BLDC_Project-master/: README.en.md  README.md
参考资料/TC264_GTM_BLDC_Project-master/TC264_GTM_BLDC_Project-master/【封装】集成封装库/: 无刷驱动-Infineon-AUIRS2181S-GTM-6S.SchLib
参考资料/TC264_GTM_BLDC_Project-master/TC264_GTM_BLDC_Project-master/【文档】芯片手册 原理图等/: 逐飞Infineon平衡单车组直播PPT.pptx
参考资料/smart-car-master/smart-car-master/: README.md
参考资料/smart-car-master/smart-car-master/MM32/: CMakeLists.txt  README.md
参考资料/smart-car-master/smart-car-master/MM32/SmartCar/code/: AHRS.c  AHRS.h  GUI.c  GUI.h  HWT101.c  HWT101.h  INS.c  INS.h  Math_Base.c  Math_Base.h  filter.c  filter.h  icm.c  icm.h  key.c  key.h  motor.c  motor.h  servo.c  servo.h  vofa.c  vofa.h
参考资料/smart-car-master/smart-car-master/MM32/SmartCar/mdk/: mm32f3277.uvguix.FLY  mm32f3277.uvoptx  mm32f3277.uvprojx
参考资料/smart-car-master/smart-car-master/MM32/SmartCar/mdk/Listings/: MM32F3277.map  startup_mm32f3277g.lst
参考资料/smart-car-master/smart-car-master/MM32/SmartCar/mdk/Objects/: MM32F3277.axf  MM32F3277.build_log.htm  MM32F3277.htm  MM32F3277.lnp  ahrs.d  fast_math.d  filter.d  gps.d  gui.d  hal_adc.d  hal_comp.d  hal_dac.d  hal_dma.d  hal_exti.d  hal_fsmc.d  hal_gpio.d  hal_i2c.d  hal_iwdg.d  hal_rcc.d  hal_rtc.d  hal_sdio.d  hal_spi.d  hal_syscfg.d  hal_tim_16b.d  hal_tim_32b.d  hal_tim_adv.d  hal_tim_basic.d  hal_uart.d  hal_usb.d  hal_wwdg.d  icm.d  ins.d  isr.d  key.d  main.d  math_base.d  mm32f3277_mm32f3277_project.dep  motor.d  servo.d  system_mm32f3277g.d  (+41 more)
参考资料/smart-car-master/smart-car-master/MM32/SmartCar/user/src/: isr.c  main.c
参考资料/smart-car-master/smart-car-master/MM32/libraries/doc/: version.txt
参考资料/smart-car-master/smart-car-master/MM32/libraries/zf_common/: zf_common_clock.c  zf_common_clock.h  zf_common_debug.c  zf_common_debug.h  zf_common_fifo.c  zf_common_fifo.h  zf_common_font.c  zf_common_font.h  zf_common_function.c  zf_common_function.h  zf_common_headfile.h  zf_common_interrupt.c  zf_common_interrupt.h  zf_common_typedef.h
参考资料/smart-car-master/smart-car-master/MM32/libraries/zf_device/: zf_device_absolute_encoder.c  zf_device_absolute_encoder.h  zf_device_bluetooth_ch9141.c  zf_device_bluetooth_ch9141.h  zf_device_camera.c  zf_device_camera.h  zf_device_gps_tau1201.c  zf_device_gps_tau1201.h  zf_device_icm20602.c  zf_device_icm20602.h  zf_device_ips114.c  zf_device_ips114.h  zf_device_ips200_parallel8.c  zf_device_ips200_parallel8.h  zf_device_key.c  zf_device_key.h  zf_device_mpu6050.c  zf_device_mpu6050.h  zf_device_mt9v03x.c  zf_device_mt9v03x.h  zf_device_oled.c  zf_device_oled.h  zf_device_ov7725.c  zf_device_ov7725.h  zf_device_scc8660.c  zf_device_scc8660.h  zf_device_tft180.c  zf_device_tft180.h  zf_device_tsl1401.c  zf_device_tsl1401.h  zf_device_tsl1401_ccd2.c  zf_device_tsl1401_ccd2.h  zf_device_type.c  zf_device_type.h  zf_device_wireless_uart.c  zf_device_wireless_uart.h
参考资料/smart-car-master/smart-car-master/MM32/libraries/zf_driver/: zf_driver_adc.c  zf_driver_adc.h  zf_driver_delay.c  zf_driver_delay.h  zf_driver_dma.c  zf_driver_dma.h  zf_driver_encoder.c  zf_driver_encoder.h  zf_driver_exti.c  zf_driver_exti.h  zf_driver_flash.c  zf_driver_flash.h  zf_driver_fsmc.c  zf_driver_fsmc.h  zf_driver_gpio.c  zf_driver_gpio.h  zf_driver_iic.c  zf_driver_iic.h  zf_driver_pit.c  zf_driver_pit.h  zf_driver_pwm.c  zf_driver_pwm.h  zf_driver_soft_iic.c  zf_driver_soft_iic.h  zf_driver_soft_spi.c  zf_driver_soft_spi.h  zf_driver_spi.c  zf_driver_spi.h  zf_driver_timer.c  zf_driver_timer.h  zf_driver_uart.c  zf_driver_uart.h
参考资料/主板/【例程】各个模块的使用例程/: 例程功能说明.xlsx
参考资料/主板/【例程】各个模块的使用例程/E01_01_button_switch_demo/: .cproject
参考资料/主板/【例程】各个模块的使用例程/E01_02_buzzer_demo/: .cproject
参考资料/无刷电机/TC264_BLDC_Project/: README.md
(+2627 files in other folders)
